cluster/apps/tools/onetimesecret/deployment-onetimesecret.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tools
  name: onetimesecret
spec:
  selector:
    matchLabels:
      app: onetimesecret
      component: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: onetimesecret
        component: frontend
    spec:
      containers:
      - name: onetimesecret
        image: quay.io/tdeutsch/onetimesecret:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 200Mi
        ports:
        - containerPort: 7143
        volumeMounts:
        - mountPath: /etc/onetime/config
          name: onetimesecret-config
          subPath: config
      volumes:
      - name: onetimesecret-config
        configMap:
          name: onetimesecret-config
          items:
          - key: config
            path: config
            mode: 0644
