cluster/apps/tools/onetimesecret/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: tools
  labels:
    app: onetimesecret
    component: frontend
  name: onetimesecret
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_TARGET_SKY}"
spec:
  tls:
    - secretName: secrets-tls
      hosts:
        - secrets.${SECRET_DOMAIN_CH}
  rules:
    - host: secrets.${SECRET_DOMAIN_CH}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onetimesecret
                port:
                  number: 7143
